# morph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MORPH_EVAL_GAP_ANALYSIS.md  README.md
.cursor/: hooks.json  hooks.json~  mcp.json  morph-record-response.sh  morph-record-stop.sh
.cursor/rules/: branch-merge-eval.mdc  eval-driven-development.mdc  morph-record.mdc  rust-no-warnings.mdc  version-bump.mdc
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  pages.yml  release-homebrew.yml
claude-code/: README.md
claude-code/hooks/: morph-record-prompt.sh  morph-record-stop.sh
cursor/: README.md  morph-record-checks.sh  morph-record-prompt.sh  morph-record-response.sh  morph-record-stop.sh
docs/: AOE-SETUP.md  CLAUDE-CODE-SETUP.md  CURSOR-SETUP.md  E2E-TESTING-PLAN.md  EVAL-DRIVEN.md  INSTALLATION.md  MERGE.md  MORPH-AND-GIT.md  MULTI-MACHINE.md  OPENCODE-SETUP.md  PHASE1-AGENT-PROMPT.md  PHASE2-AGENT-PROMPT.md  PHASE3-AGENT-PROMPT.md  PRODUCTION-READINESS.md  README.md  RELEASING.md  SECURITY.md  SERVER-SETUP.md  SESSION-TRACKING.md  TESTING.md  THEORY.md  morph-paper.tex  plan-blob-store-sqlite.md  plan-gix-store-option-b.md  plan-morph-viz.md  reference-mode.md  v0-spec.md
docs/plans/: morph-tap-gap-analysis.md  plan-gix-store-option-b.md  plan-morph-viz.md  plan-multi-machine-pr1.md  plan-multi-machine-pr2.md  plan-multi-machine-pr3.md  plan-multi-machine-pr4.md  plan-multi-machine-pr5.md  plan-multi-machine-pr6.md
morph-cli/: Cargo.toml  build.rs
morph-cli/assets/aoe/: Dockerfile.morph-aoe
morph-cli/assets/claude-code/hooks/: morph-record-prompt.sh  morph-record-stop.sh
morph-cli/assets/cursor/hooks/: morph-record-prompt.sh  morph-record-response.sh  morph-record-stop.sh
morph-cli/assets/cursor/rules/: behavioral-commits.mdc  branch-merge-eval.mdc  eval-driven-development.mdc  morph-record.mdc
morph-cli/assets/opencode/: AGENTS.md
morph-cli/assets/opencode/plugins/: morph-record.ts
morph-cli/src/: cli.rs  inspect.rs  main.rs  remote_helper.rs  setup.rs
morph-cli/tests/: integration.rs  remote_helper_integration.rs  spec_tests.rs  ssh_fetch_integration.rs  status_merge_integration.rs
morph-cli/tests/specs/: add.yaml  annotate.yaml  annotations_indexed.yaml  branch.yaml  certify_gate.yaml  certify_prefix_lookup.yaml  checkout.yaml  clone.yaml  commit.yaml  commit_allow_empty_metrics_flag.yaml  commit_auto_new_cases.yaml  commit_auto_run.yaml  commit_blocks_when_policy_requires_metrics.yaml  commit_from_run_metrics.yaml  commit_runs_configured_test_command.yaml  commit_uses_default_suite.yaml  commit_warns_empty_metrics.yaml  config.yaml  config_commit_test_command.yaml  diff.yaml  effective_metrics.yaml  error_paths.yaml  errors.yaml  eval_add_case_yaml.yaml  eval_flat.yaml  eval_from_output.yaml  eval_gaps.yaml  eval_gaps_stale_certifications.yaml  eval_run_cmd.yaml  eval_suite_from_specs.yaml  files.yaml  forget.yaml  gc.yaml  hash_prefix.yaml  head_command.yaml  help_is_grouped.yaml  init.yaml  init_at_latest.yaml  init_in_git_dir.yaml  init_prints_active_policy.yaml  (+57 more)
morph-core/: Cargo.toml
morph-core/src/: agent.rs  annotate.rs  author.rs  commit.rs  commit_config.rs  diff.rs  eval_parsers.rs  eval_suite.rs  extract.rs  forget.rs  gc.rs  hash.rs  identity.rs  index.rs  language.rs  lib.rs  merge.rs  merge_flow.rs  merge_state.rs  metrics.rs  migrate.rs  morphignore.rs  objects.rs  objmerge.rs  pipemerge.rs  policy.rs  record.rs  reference.rs  repo.rs  revert.rs  run_breadcrumb.rs  ssh_proto.rs  ssh_store.rs  stash.rs  store.rs  structured.rs  sync.rs  tag.rs  tap.rs  text3way.rs  (+5 more)
morph-e2e/: Cargo.toml  README.md
morph-e2e/features/: add_and_commit.feature  behavioral_merge_workflow.feature  branch_and_checkout.feature  concurrent_agents.feature  evidence_backed_commit.feature  hook_scripts.feature  hosted_inspection_workflow.feature  init_and_status.feature  merge_workflow.feature  prompt_create_materialize.feature  remote_sync_workflow.feature  rollup_workflow.feature  run_record_session.feature  run_to_pipeline_extraction.feature  spec_first_workflow.feature  team_ci_workflow.feature
morph-e2e/src/: lib.rs
morph-e2e/tests/: cucumber.rs
morph-mcp/: Cargo.toml  build.rs
morph-mcp/src/: main.rs  params.rs
morph-serve/: Cargo.toml  README.md
morph-serve/src/: graph.rs  handlers.rs  lib.rs  org_policy.rs  service.rs  tests.rs  views.rs
morph-serve/static/: graph.html  index.html
site/: changelog.html  index.html  make-og-card.sh  og-card.html
site/tutorials/: adding-to-git-project.html  getting-started.html  index.html
