[package]
name = "morph-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morph"
path = "src/main.rs"

[features]
default = ["visualize"]
visualize = ["dep:morph-serve"]

[dependencies]
morph-core = { path = "../morph-core" }
morph-serve = { path = "../morph-serve", optional = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.10"
