[package]
name = "morph-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "morph"
path = "src/main.rs"

[features]
default = ["visualize", "cursor-setup"]
visualize = ["dep:morph-serve"]
cursor-setup = []

[dependencies]
morph-core = { path = "../morph-core" }
morph-serve = { path = "../morph-serve", optional = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "2.1"
tempfile = "3.10"
morph-core = { path = "../morph-core" }
serde_json = "1.0"
