[package]
name = "morph-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "morph"
path = "src/main.rs"

[features]
default = ["visualize", "cursor-setup"]
visualize = ["dep:morph-serve"]
cursor-setup = []

[dependencies]
morph-core = { path = "../morph-core" }
morph-serve = { path = "../morph-serve", optional = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `toml_edit` round-trips comments and formatting so `morph setup aoe` can
# layer its hooks/sandbox block into a user's existing
# `.agent-of-empires/config.toml` without clobbering their other settings.
toml_edit = "0.22"
# `shlex` parses POSIX-shell-quoted strings into argv. Used to take
# `commit.test_command` (a single string the user types into
# `morph config`) and split it for `morph_core::run_test_command`.
shlex = "1.3"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "2.1"
tempfile = "3.10"
morph-core = { path = "../morph-core" }
serde_json = "1.0"
