[package]
name = "morph-core"
version.workspace = true
edition = "2021"
description = "Morph VCS core: object model, content addressing, storage"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
hex = "0.4"
walkdir = "2.4"
ignore = "0.4"
base64 = "0.22"
tempfile = "3.10"

[dev-dependencies]
proptest = "1.4"
