[package]
name = "morph-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morph-mcp"
path = "src/main.rs"

[dependencies]
morph-core = { path = "../morph-core" }
anyhow = "1.0"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
