[package]
name = "morph-serve"
version.workspace = true
edition = "2021"
description = "Morph hosted service: shared inspection and policy layer for team collaboration"

[lib]
name = "morph_serve"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs"] }
tower-http = { version = "0.6", features = ["cors"] }
morph-core = { path = "../morph-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
